# velia

./: .clang-format  .gitmodules  .zuul.CzechLight-internal.yaml  .zuul.public.yaml  .zuul.yaml  CMakeLists.txt  Doxyfile.in  README.md  cz.cesnet.led.conf  project.config
alarms/: CMakeLists.txt  alarm.xml  clean.sh  client.cpp  client.h  czechlight-alarm-manager.yang  czechlight-alarms.yang  daemon.cpp  daemon.h  sysrepo-ietf-alarms.yang  test.cpp  test2.cpp
ci/: build.sh  pre.yaml
cli/: a  velia-list-alarms.in  velia-list-alarms.jq  velia-list-hardware.in  velia-list-hardware.jq
cmake/: SysrepoClean.cmake  SysrepoTest.cmake
docs/: index.md
network/: eth1.network
src/: Factory.cpp  Factory.h  State.h  main-eeprom.cpp  main-firewall.cpp  main-hardware.cpp  main-health.cpp  main-ipmi-fru-eeprom.cpp  main-network.cpp  main-system.cpp  main.cpp  main.h  main2.cpp  waitUntilSignalled.cpp
src/firewall/: Firewall.cpp  Firewall.h
src/health/: Factory.cpp  Factory.h  State.cpp  State.h  SystemdUnits.cpp  SystemdUnits.h  main.cpp  systemd-alarms.cpp  systemd-alarms.h
src/ietf-hardware/: Factory.cpp  Factory.h  FspYh.cpp  FspYh.h  FspYhPsu.cpp  FspYhPsu.h  IETFHardware.cpp  IETFHardware.h  main.cpp  thresholds.cpp  thresholds.h  thresholds_fwd.h
src/ietf-system/: RAUC.cpp  RAUC.h  Sysrepo.cpp  Sysrepo.h
src/inputs/: AbstractInput.cpp  AbstractInput.h  DbusSemaphoreInput.cpp  DbusSemaphoreInput.h  DbusSystemdInput.cpp  DbusSystemdInput.h
src/list-alarms/: velia-list-alarms.in  velia-list-alarms.jq
src/manager/: AbstractManager.cpp  AbstractManager.h  StateManager.cpp  StateManager.h
src/mux/: Mux.cpp  Mux.h
src/network/: Factory.cpp  Factory.h  IETFInterfaces.cpp  IETFInterfaces.h  IETFInterfacesConfig.cpp  IETFInterfacesConfig.h  LLDP.cpp  LLDP.h  LLDPSysrepo.cpp  LLDPSysrepo.h  NetworkctlUtils.cpp  NetworkctlUtils.h  Rtnetlink.cpp  Rtnetlink.h  SystemdNetworkdDbusClient.cpp  SystemdNetworkdDbusClient.h
src/outputs/: AbstractOutput.cpp  AbstractOutput.h  LedSysfsDriver.cpp  LedSysfsDriver.h  callables.cpp  callables.h
src/system/: Authentication.cpp  Authentication.h  CzechlightSystem.cpp  CzechlightSystem.h  Firmware.cpp  Firmware.h  Hostname.cpp  Hostname.h  IETFInterfaces.cpp  IETFInterfaces.h  IETFInterfacesConfig.cpp  IETFInterfacesConfig.h  IETFSystem.cpp  IETFSystem.h  JournalUpload.cpp  JournalUpload.h  LED.cpp  LED.h  LLDP.cpp  LLDP.h  LLDPCallback.cpp  LLDPCallback.h  LLDPSysrepo.cpp  LLDPSysrepo.h  Network.cpp  Network.h  RAUC.cpp  RAUC.h  Rtnetlink.cpp  Rtnetlink.h  Syslog.cpp  Syslog.h  Sysrepo.cpp  Sysrepo.h  system_vars.h.in
src/utils/: UniqueResource.h  alarms.cpp  alarms.h  benchmark.cpp  benchmark.h  exceptions.cpp  exceptions.h  exec.cpp  exec.h  io.cpp  io.h  journal.cpp  journal.h  libyang.cpp  libyang.h  log-fwd.h  log-init.cpp  log-init.h  log-sysrepo.cpp  log-sysrepo.h  log.cpp  log.h  string.cpp  string.h  sysrepo.cpp  sysrepo.h  thresholds.h  thresholds_fwd.h  time.cpp  time.h  waitUntilSignalled.cpp  waitUntilSignalled.h
src/velia-hardware/: CMakeLists.txt  HardwareState.cpp  HardwareState.h  main.cpp
src/velia-hardware/sysfs/: EMMC.cpp  EMMC.h  Exceptions.cpp  Exceptions.h  HWMon.cpp  HWMon.h
src/velia-hardware/sysrepo/: Logging.cpp  Logging.h  OpsCallback.cpp  OpsCallback.h
src/velia-systemstate/: CMakeLists.txt  State.cpp  main.cpp
src/velia-systemstate/inputs/: AbstractInput.cpp  AbstractInput.h  DbusSemaphoreInput.h
src/velia-systemstate/manager/: StateManager.cpp
src/velia-systemstate/outputs/: LedSysfsDriver.h  SlotWrapper.h  callables.h
tests/: configure.cmake.h.in  dbus-semaphore_server.cpp  dbus-semaphore_server.h  doctest_integration.cpp  dummy.cpp  fake.h  fake2.h  hardware_appliance.cpp  hardware_eeprom.cpp  hardware_emmc.cpp  hardware_fspyh.cpp  hardware_fspyhpsu.cpp  hardware_hwmon.cpp  hardware_hwstate.cpp  hardware_ietf-hardware.cpp  hardware_thresholds.cpp  health_input-semaphore.cpp  health_input-systemd.cpp  health_output-led.cpp  health_state-manager.cpp  health_systemd-units.cpp  input-semaphore.cpp  input-systemd.cpp  interface.sh  mux.cpp  network_dbus-systemd.cpp  network_lldp.cpp  network_managed-links.cpp  network_utils.cpp  output-led.cpp  pretty-printers.h  pretty_printers.h  state-manager.cpp  sysrepo-firewall.cpp  sysrepo_authentication.cpp  sysrepo_health-led-alarms.cpp  sysrepo_ietf-alarms.cpp  sysrepo_ietf-hardware.cpp  sysrepo_ietf-system.cpp  sysrepo_interfaces-libnl.cpp  (+35 more)
tests/dbus-helpers/: dbus_network1_server.cpp  dbus_network1_server.h  dbus_rauc_server.cpp  dbus_rauc_server.h  dbus_resolve1_server.cpp  dbus_resolve1_server.h  dbus_semaphore_server.cpp  dbus_semaphore_server.h  dbus_systemd_server.cpp  dbus_systemd_server.h
tests/fs-helpers/: FileInjector.cpp  FileInjector.h  utils.cpp  utils.h
tests/mock/: ietf_hardware.h  system.h  systemstate.h
tests/networkctl/: coherent-a-d-DQ000V9U-systemd258.json  sdn-bidi-cplus1572-PGCL250303.json  sdn-bidi-cplus1572-PGCL250305-with-dropins.json
tests/sysrepo-helpers/: alarms.cpp  alarms.h  common.cpp  common.h  datastore.cpp  datastore.h  notifications.cpp  notifications.h  rpc.cpp  rpc.h
yang/: czechlight-alarms@2022-07-12.yang  czechlight-authentication.json  czechlight-firewall@2021-01-25.yang  czechlight-lldp@2020-11-04.yang  czechlight-lldp@2026-01-09.yang  czechlight-network-bidi-ocm@2025-06-06.yang  czechlight-network-inline-amp@2025-06-06.yang  czechlight-network-roadm@2025-06-06.yang  czechlight-network-sdn-generic@2025-06-06.yang  czechlight-network-sdn-inline@2025-06-06.yang  czechlight-network-sdn-roadm-line@2025-06-06.yang  czechlight-network@2021-02-22.yang  czechlight-network@2025-06-06.yang  czechlight-network@2026-03-09.yang  czechlight-system.json  czechlight-system@2021-01-13.yang  czechlight-system@2021-01-25.yang  czechlight-system@2021-01-26.yang  czechlight-system@2021-04-19.yang  czechlight-system@2022-07-08.yang  ietf-inet-types@2025-12-22.yang  ietf-interfaces.json  ietf-interfaces_sdn-inline.json  ietf-ip.json  ietf-yang-types@2025-12-22.yang  nftables-firewall.yang  velia-alarms@2022-07-12.yang
(+221 files in other folders)
